--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "time-type",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.27.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.1.2",
-    "vite": "^2.3.4",
-    "vite-plugin-eslint": "^1.1.1"
-  }
+    "name": "time-type",
+    "version": "0.0.0",
+    "homepage": "https://ivoelbert.github.io/time-type/",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "serve": "vite preview",
+        "predeploy": "tsc && vite build",
+        "deploy": "gh-pages -d build"
+    },
+    "dependencies": {
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.25.0",
+        "@typescript-eslint/parser": "^4.25.0",
+        "@vitejs/plugin-react-refresh": "^1.3.1",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.27.0",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "gh-pages": "^3.2.0",
+        "typescript": "^4.1.2",
+        "vite": "^2.3.4",
+        "vite-plugin-eslint": "^1.1.1"
+    }
 }
