--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "tsc && vite build",
         "serve": "vite preview",
         "predeploy": "tsc && vite build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "react": "^17.0.0",
